[tool.poetry]
name = "envattrs"
version = "19.1"
description = "Populate attr.s or dataclass objects from environment variables"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>"]
license = "APLv2"
repository = "https://github.com/HENNGE/envattrs"
readme = "README.md"
homepage = "https://github.com/HENNGE/envattrs"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
]
packages = [{include = "envattrs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.6.2"
attrs = "^19.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
