[tool.poetry]
name = "envattrs"
version = "19.1"
description = "Populate attr.s or dataclass objects from environment variables"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>"]
license = "APLv2"
repository = "https://github.com/HENNGE/envattrs"
readme = "README.md"
homepage = "https://github.com/HENNGE/envattrs"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
packages = [{include = "envattrs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
